# docs/swagger.json
@@ -214,66 +214,6 @@
                 }
             }
         },
-        "/v1/fsi/details": {
-            "get": {
-                "description": "Fetches all the details of FSI's that are eligible for comparision",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Fsi_Details"
-                ],
-                "summary": "Get complete FSI's details",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "authorization token",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "unique request id",
-                        "name": "X-Request-Id",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/model.APIResponse"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-                                            "$ref": "#/definitions/model.FsiStruct"
-                                        }
-                                    }
-                                }
-                            ]
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/errors.ErrResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/errors.ErrResponse"
-                        }
-                    }
-                }
-            }
-        },
         "/v1/home": {
             "get": {
                 "description": "Get all data pertaining to home page",
@@ -313,66 +253,6 @@
                                     "properties": {
                                         "data": {
                                             "$ref": "#/definitions/model.Homepage"
-                                        }
-                                    }
-                                }
-                            ]
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/errors.ErrResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/errors.ErrResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/v1/homeInfo": {
-            "get": {
-                "description": "Get all data pertaining to home page",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "HomeInfo"
-                ],
-                "summary": "Get HomeInfo",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "authorization token",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "unique request id",
-                        "name": "X-Request-Id",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/model.APIResponse"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-                                            "$ref": "#/definitions/model.HomeInfo"
                                         }
                                     }
                                 }
@@ -581,6 +461,66 @@
                 }
             }
         },
+        "/v1/portfolio/details": {
+            "get": {
+                "description": "Get Portfolio Details from cache",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Portfolio"
+                ],
+                "summary": "Get Portfolio Details from cache",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "authorization token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "unique request id",
+                        "name": "X-Request-Id",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/model.APIResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/model.PortfolioDetails"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/errors.ErrResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/errors.ErrResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/token/{provider}": {
             "get": {
                 "description": "Get token from vendor for given clientCode",
@@ -646,72 +586,6 @@
                     }
                 }
             }
-        },
-        "/v1/upswing": {
-            "get": {
-                "description": "Call upswing portfolio API and Pending journey for given Client code",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "upswing"
-                ],
-                "summary": "Get portfolio and Pending journey",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "authorization token",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "unique request id",
-                        "name": "X-Request-Id",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "source",
-                        "name": "X-Source",
-                        "in": "header"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/model.APIResponse"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-                                            "$ref": "#/definitions/model.CombinedResponse"
-                                        }
-                                    }
-                                }
-                            ]
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/errors.ErrResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/errors.ErrResponse"
-                        }
-                    }
-                }
-            }
         }
     },
     "definitions": {
@@ -732,17 +606,6 @@
                 "data": {},
                 "message": {
                     "type": "string"
-                }
-            }
-        },
-        "model.CombinedResponse": {
-            "type": "object",
-            "properties": {
-                "netWorthData": {
-                    "$ref": "#/definitions/model.NetWorthResponse"
-                },
-                "pendingJourney": {
-                    "$ref": "#/definitions/model.PendingJourneyResponse"
                 }
             }
         },
@@ -818,41 +681,6 @@
                 }
             }
         },
-        "model.FsiDetailPlans": {
-            "type": "object",
-            "properties": {
-                "description": {
-                    "type": "string"
-                },
-                "fsi": {
-                    "type": "string"
-                },
-                "imageUrl": {
-                    "type": "string"
-                },
-                "insuredAmount": {
-                    "type": "integer"
-                },
-                "interestRate": {
-                    "type": "number"
-                },
-                "lockinMonths": {
-                    "type": "integer"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "seniorCitizen": {
-                    "type": "number"
-                },
-                "type": {
-                    "type": "string"
-                },
-                "womenBenefit": {
-                    "type": "number"
-                }
-            }
-        },
         "model.FsiDetails": {
             "type": "object",
             "properties": {
@@ -911,54 +739,6 @@
                     "type": "integer"
                 },
                 "plans": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/model.Plan"
-                    }
-                }
-            }
-        },
-        "model.FsiStruct": {
-            "type": "object",
-            "properties": {
-                "about": {
-                    "type": "object",
-                    "additionalProperties": true
-                },
-                "calculator": {},
-                "faqs": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/model.FAQ"
-                    }
-                },
-                "plans": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/model.FsiDetailPlans"
-                    }
-                }
-            }
-        },
-        "model.HomeInfo": {
-            "type": "object",
-            "properties": {
-                "allFDs": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/model.Plan"
-                    }
-                },
-                "faqs": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/model.FAQ"
-                    }
-                },
-                "journey": {
-                    "$ref": "#/definitions/model.Journey"
-                },
-                "mostBought": {
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/model.Plan"
@@ -1025,20 +805,6 @@
                 }
             }
         },
-        "model.PendingJourneyResponse": {
-            "type": "object",
-            "properties": {
-                "journeyPending": {
-                    "type": "boolean"
-                },
-                "journeyPendingOnPayment": {
-                    "type": "boolean"
-                },
-                "journeyPendingOnVkyc": {
-                    "type": "boolean"
-                }
-            }
-        },
         "model.PendingState": {
             "type": "object",
             "properties": {
@@ -1102,6 +868,37 @@
                     "items": {
                         "$ref": "#/definitions/model.Plan"
                     }
+                }
+            }
+        },
+        "model.Portfolio": {
+            "type": "object",
+            "properties": {
+                "currentValue": {
+                    "type": "number"
+                },
+                "interestEarned": {
+                    "type": "number"
+                },
+                "investedValue": {
+                    "type": "number"
+                },
+                "returnsPercentage": {
+                    "type": "number"
+                },
+                "returnsValue": {
+                    "type": "number"
+                },
+                "totalActiveDeposits": {
+                    "type": "integer"
+                }
+            }
+        },
+        "model.PortfolioDetails": {
+            "type": "object",
+            "properties": {
+                "portfolio": {
+                    "$ref": "#/definitions/model.Portfolio"
                 }
             }
         },
